# Anomaly-Launcher

./: Cargo.toml  README.md  build.rs  launcher.rc
.github/workflows/: rust.yml
src/: app_config.rs  funnysht.rs  game.rs  localization.rs  main.rs  styles.rs
