[package]
name = "AnomalyLauncher"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = {version = "0.27.2", features = ["glow", "default_fonts"], default-features = false}
rfd = { version = "0.14.1", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
image = "0.25.1"
sysinfo = "0.29"
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "winnt"] }
affinity = "0.1.2"
walkdir = "2.3"
md5 = "0.7.0"
cpuid = "0.1"
sys-locale = "0.3"
once_cell = "1.19"
windows = { version = "0.56", features = ["Win32_UI_Shell"] }


[profile.dev]
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false

[build-dependencies]
winres = "0.1.12"
